added some style changes. updated protein list

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
     <div class="row">
         <div class="col m-auto text-center">
             <button class=" btn-dark btn-lg" id="buttonOne">Click me for a Protein Dish</button>
-            <div class="mt-4" id="eightBall">
-                <p class="bg-light p-4 text-dark" id="answer"></p>
+            <div class="mt-4 d-flex justify-content-center flex-column" id="eightBall">
+                <p class="bg-light p-4 text-dark m-2" id="answer"></p>
                 <!-- button to add the dish to the menu -->
-                <button type="button" class="btn btn-outline-light" id="menuButtonProtein">Add to Menu</button>
+                <button type="button" class="btn btn-outline-light mt-3" id="menuBtnPro">Add to Menu</button>
             </div>
         </div>
     <!-- Button and answers for veggie -->
         <div class="col m-auto text-center">
             <button class=" btn-dark btn-lg" id="buttonTwo">Click me for a Veggie Dish</button>
-            <div class="mt-4" id="eightBall">
-                <p class="bg-light p-4 text-dark" id="answerTwo"></p>
+            <div class="mt-4 d-flex justify-content-center flex-column" id="eightBall">
+                <p class="bg-light p-4 text-dark m-2" id="answerTwo"></p>
                 <!-- button to add the dish to the menu -->
-                <button type="button" class="btn btn-outline-light" id="menuButtonVeggie">Add to Menu</button>
+                <button type="button" class="btn btn-outline-light mt-3" id="menuBtnVeg">Add to Menu</button>
             </div>
         </div>
     </div>
