changed some variable names for readability

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     <!-- Button and answers for protein -->
     <div class="row">
         <div class="col m-auto text-center">
-            <button class=" btn-dark btn-lg" id="buttonOne">Click me for a Protein Dish</button>
+            <button class=" btn-dark btn-lg" id="buttonPro">Click me for a Protein Dish</button>
             <div class="mt-4 d-flex justify-content-center flex-column" id="eightBall">
-                <p class="bg-light p-4 text-dark m-2" id="answer"></p>
+                <p class="bg-light p-4 text-dark m-2" id="answerPro"></p>
                 <!-- button to add the dish to the menu -->
                 <button type="button" class="btn btn-outline-light mt-3" id="menuBtnPro">Add to Menu</button>
             </div>
         </div>
     <!-- Button and answers for veggie -->
         <div class="col m-auto text-center">
-            <button class=" btn-dark btn-lg" id="buttonTwo">Click me for a Veggie Dish</button>
+            <button class=" btn-dark btn-lg" id="buttonVeg">Click me for a Veggie Dish</button>
             <div class="mt-4 d-flex justify-content-center flex-column" id="eightBall">
-                <p class="bg-light p-4 text-dark m-2" id="answerTwo"></p>
+                <p class="bg-light p-4 text-dark m-2" id="answerVeg"></p>
                 <!-- button to add the dish to the menu -->
                 <button type="button" class="btn btn-outline-light mt-3" id="menuBtnVeg">Add to Menu</button>
             </div>
