added media query and took out empty string in Veggie array

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Button and answers for protein -->
     <div class="row">
-        <div class="col m-auto text-center">
+        <div class="col p-3 m-auto text-center">
             <button class=" btn-dark btn-lg" id="buttonPro">Click me for a Protein Dish</button>
             <div class="mt-4 d-flex justify-content-center flex-column" id="eightBall">
                 <p class="bg-light p-4 text-dark m-2" id="answerPro"></p>
@@ -28,7 +28,7 @@
             </div>
         </div>
     <!-- Button and answers for veggie -->
-        <div class="col m-auto text-center">
+        <div class="col p-3 m-auto text-center">
             <button class=" btn-dark btn-lg" id="buttonVeg">Click me for a Veggie Dish</button>
             <div class="mt-4 d-flex justify-content-center flex-column" id="eightBall">
                 <p class="bg-light p-4 text-dark m-2" id="answerVeg"></p>
