--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
     <div class="row">
         <div class="col p-3 m-auto text-center">
             <button class=" btn-dark btn-lg" id="buttonPro">Click me for a Protein Dish</button>
-            <div class="mt-4 d-flex justify-content-center flex-column" id="eightBall">
-                <p class="bg-light p-4 text-dark m-2" id="answerPro"></p>
+            <div class="d-flex justify-content-center flex-column" id="eightBall">
+                <p class="text-white" id="answerPro"></p>
                 <!-- button to add the dish to the menu -->
-                <button type="button" class="btn btn-outline-light mt-3" id="menuBtnPro">Add to Menu</button>
+                <button type="button" class="btn btn-dark" id="menuBtnPro">Add to Menu</button>
             </div>
         </div>
     <!-- Button and answers for veggie -->
         <div class="col p-3 m-auto text-center">
             <button class=" btn-dark btn-lg" id="buttonVeg">Click me for a Veggie Dish</button>
-            <div class="mt-4 d-flex justify-content-center flex-column" id="eightBall">
-                <p class="bg-light p-4 text-dark m-2" id="answerVeg"></p>
+            <div class="d-flex justify-content-center flex-column" id="eightBall">
+                <p class="text-white" id="answerVeg"></p>
                 <!-- button to add the dish to the menu -->
-                <button type="button" class="btn btn-outline-light mt-3" id="menuBtnVeg">Add to Menu</button>
+                <button type="button" class="btn btn-dark" id="menuBtnVeg">Add to Menu</button>
             </div>
         </div>
     </div>
