feat added a clear menu button and styled it. Added more dishes

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 
 
     <!-- Menu starts here -->
-    <div class="row">
-        <div class="col p-4 mt-4 text-center fs-1 fw-bold">Weekly Menu</div>
+    <div class="row flex-column align-items-center">
+        <div class="col p-2 text-center fs-1 fw-bold">Weekly Menu</div>
+        <button type="button" class="btn btn-dark m-3" id="menuClear">Clear Menu</button>
     </div>
     <!-- Content for the menu goes here. This contains the background image. -->
     <div class="container d-flex justify-content-center" id="menu">
